@@ -1,5 +1,5 @@
 /*
- * "$Id: client.c,v 1.132 2003/01/03 14:59:31 mike Exp $"
+ * "$Id: client.c,v 1.133 2003/01/13 18:38:53 mike Exp $"
  *
  *   Client routines for the Common UNIX Printing System (CUPS) scheduler.
  *
@@ -82,6 +82,8 @@ AcceptClient(listener_t *lis)	/* I - Listener socket */
   client_t		*con;	/* New client pointer */
   unsigned		address;/* Address of client */
   struct hostent	*host;	/* Host entry for address */
+  static time_t		last_dos = 0;
+				/* Time of last DoS attack */
 
 
   LogMessage(L_DEBUG2, "AcceptClient(%p) %d NumClients = %d",
@@ -134,8 +136,12 @@ AcceptClient(listener_t *lis)	/* I - Listener socket */
 
   if (count >= MaxClientsPerHost)
   {
-    LogMessage(L_WARN, "Possible DoS attack - more than %d clients connecting from %s!",
-               MaxClientsPerHost, Clients[i].http.hostname);
+    if ((time(NULL) - last_dos) >= 60)
+    {
+      last_dos = time(NULL);
+      LogMessage(L_WARN, "Possible DoS attack - more than %d clients connecting from %s!",
+        	 MaxClientsPerHost, Clients[i].http.hostname);
+    }
 
 #ifdef WIN32
     closesocket(con->http.fd);
@@ -2667,5 +2673,5 @@ pipe_command(client_t *con,		/* I - Client connection */
 
 
 /*
- * End of "$Id: client.c,v 1.132 2003/01/03 14:59:31 mike Exp $".
+ * End of "$Id: client.c,v 1.133 2003/01/13 18:38:53 mike Exp $".
  */
